--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -73,7 +73,7 @@
     cursor: pointer;
     position: absolute;
     width: 5%;
-    bottom: 25px;
+    bottom: 7%;
   }
 
   .modalWrapper .modalContainer .content img {
