--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -7,11 +7,14 @@
   font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
+html,body {
+ overflow: hidden; 
+}  
+
 body {
   display: flex;
   justify-content: center;
   max-width: 100%;
   height: 100vh;
   background: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
-  overflow: hidden;
 }
